# covid19_vaccination

./: Makefile  README.md
ICU_durations/: Cargo.toml
ICU_durations/data/: durations_eta45_kappa60.data  durations_eta45_kappa75.data  durations_eta60_kappa75.data  durations_eta60_kappa90.data  durations_eta75_kappa75.data  durations_eta75_kappa90.data  durations_eta90_kappa90.data
ICU_durations/plot/: .fuse_hidden0000e0c400000033  ICU_durations.py
ICU_durations/src/: main.rs
model_lib/: Cargo.toml
model_lib/src/: lib.rs
model_lib/src/vaccination_model/: age_group_state_vector.rs  model.rs  solver.rs
scenarios/: Cargo.toml  dynamics.py  katex-header.html  mpl_options.py  plot_python.txt
scenarios/data/III_GER_pre-COVID-reduced-schools_sero0.10_influx1.0_kappa0.90_eta0.75_sigma0.50_uptake0.80_ICU65.0_TTI1.0/: 0-19_age_group.data  20-39_age_group.data  40-59_age_group.data  60-69_age_group.data  70-79_age_group.data  80+_age_group.data  tHRt.data
scenarios/data/III_eta75_uptake80/: 0-19_age_group.data  20-39_age_group.data  40-59_age_group.data  60-69_age_group.data  70-79_age_group.data  80+_age_group.data  tHRt.data
scenarios/data/II_GER_pre-COVID-reduced-schools_sero0.10_influx1.0_kappa0.90_eta0.75_sigma0.50_uptake0.80_ICU65.0_TTI1.0/: 0-19_age_group.data  20-39_age_group.data  40-59_age_group.data  60-69_age_group.data  70-79_age_group.data  80+_age_group.data  tHRt.data
scenarios/data/II_eta75_uptake80/: 0-19_age_group.data  tHRt.data  (+5 more)
scenarios/plot/: mpl_options.py  scenarios.py  scenarios_summary.py  sensitivity.py
scenarios/src/: main.rs
(+77 files in other folders)
