[package]
name = "covid19_vaccine_model_scenarios"
version = "1.0.0"
authors = ["Simon Bauer", "Sebastian Contreras"]
edition = "2018"
description = "A script for generating the scenarios featured in our paper."
readme = "README.md"
homepage = "https://arxiv.org/abs/2103.06228"
repository = ""
license-file = "../LICENSE"
keywords = ["COVID-19", "vaccination", "MPIDS"]
publish = false

[dependencies]
covid19_vaccine_model = {path = "../model_lib"}